--- a/index.html
+++ b/index.html
@@ -230,6 +230,13 @@
               </ul>
             </section>
 
+            <section class="promoted-articles new-articles">
+              <h4 class="promoted-articles__title">New articles</h4>
+              <ul class="promoted-articles__list row">
+                <li class="preload"></li>
+              </ul>
+            </section>
+
             <div class="category-tree" id="category-tree">
 
               <section class="category-tree-item">
@@ -767,6 +774,42 @@
 
       Tracker.track("front_page_viewed", "BAh7AA==--50d1974e05bddc24bd4b43467913737de44d3c7e");
     })();
+  </script>
+
+  <script>
+    fetch('https://jsonplaceholder.typicode.com/posts/')
+      .then(
+      function (response) {
+        const articlesContainer = document.querySelector('.new-articles .promoted-articles__list');
+        if (response.status !== 200) {
+          console.log('Looks like there was a problem. Status Code: ' +
+            response.status);
+          return;
+        }
+
+        response.json().then(function (data) {
+          const articles = data.splice(0, 10).reverse();
+          const html = articles.map(articles => {
+            const articleTitle = articles.title;
+            const articleBody = articles.body;
+            return `
+                <li class="promoted-articles-item column column--xs-12">
+                    <h3 class="promoted-articles-item__title">${articleTitle}</h3>
+                    <p class="meta">${articleBody}</p>
+                </li>
+              `
+          }).join('');
+          articlesContainer.innerHTML = html;
+        });
+      }
+      )
+      .catch(function (err) {
+        const articlesContainer = document.querySelector('.new-articles .promoted-articles__list');
+        articlesContainer.innerHTML = `
+          <li class="promoted-articles-item column column--xs-12">
+              <h3 class="promoted-articles-item__title promoted-articles-item--error">There was a problem with network.</h3>
+          </li>`;
+      });
   </script>
 
 </body>
